# optimization-functions

./: Readme.md  demo.ipynb  setup.cfg  setup.py
optifn/: __init__.py  abstract.py  callables.py  functions.py
