[metadata]
name = optimization-functions
version = 0.0.1
author = Marco Heyden
author_email = marco.heyden@kit.edu
description = A collection of python optimization functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/heymarco/optimization-functions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = optimization-functions
packages = find:
python_requires = >=3.6

[options.packages.find]
where = optifn